# mama_5_django

./: README.md  db.sqlite3  pyproject.toml
all_notifications/: apps.py  urls.py  views.py
authentication/: forms.py  views.py
authentication/migrations/: 0001_initial.py
config/: settings.py  urls.py
mama5/: apps.py  views.py
message_notification/: apps.py  models.py
message_notification/migrations/: 0001_initial.py  0002_alter_messagenotification_time_created.py  0003_alter_messagenotification_time_created.py  0004_alter_messagenotification_time_created.py
post_notification/: apps.py  models.py
post_notification/migrations/: 0001_initial.py  0002_alter_reviewnotification_time_created.py  0003_alter_reviewnotification_time_created.py  0004_alter_reviewnotification_time_created.py
static/css/: style.css
static/js/: script.js
templates/: about.html  all_messages.html  all_posts.html  base.html  generic_form.html  home.html  index.html  notifications.html  profile.html  tranont_index.html  user_posts.html
tranont/: apps.py  urls.py  views.py
user_account/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
user_account/migrations/: 0001_initial.py  0002_alter_profile_created_at.py  0002_alter_user_username.py  0002_alter_useraccount_options.py  0002_auto_20211026_1641.py  0002_useraccount_isnew.py  0003_alter_user_managers.py  0004_auto_20211026_1839.py
user_message/: forms.py  models.py  urls.py  views.py
user_message/migrations/: 0001_initial.py
user_post/: forms.py  models.py  urls.py  views.py
(+2 files in other folders)
